--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 			<p>Python developer with background in electrical engineering 
 			and project management.<br/> Passionate about Artificial Intelligence 
-			and for customer-focused solutions.</p>
+			for customer-focused solutions.</p>
 		</div>
 	  </header>
 
@@ -133,11 +133,9 @@
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
       <footer>
 	  <div class="container">
-			<ul>
-			  <li><a href="mailto:nizar.ayman@live.com"><img src="./images/mail.png" /></a></li>
-			  <li><a href="https://www.linkedin.com/in/nizaralsaeed/" target="_blank"><img src="./images/linkedin.png" /></a></li>
-			  <li><a href="https://www.github.com/nizaralsaeed/" target="_blank"><img src="./images/github.png" /></a></li>
-			</ul>
+			  <a href="mailto:nizar.ayman@live.com"><img src="./images/mail.png" /></a>
+			  <a href="https://www.linkedin.com/in/nizaralsaeed/" target="_blank"><img src="./images/linkedin.png" /></a>
+			  <a href="https://www.github.com/nizaralsaeed/" target="_blank"><img src="./images/github.png" /></a>
 		</div>
       </footer>
     </main>
