--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nizar Alsaeed, Software Developer</title>
+    <title>Nizar Alsaeed, Electrical Engineer</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
@@ -12,11 +12,10 @@
       <header>
 		<div class="container">
 			<h1>Nizar Alsaeed</h1>
-			<h2>Software Developer</h2>
+			<h2>Electrical Engineer</h2>
 
-			<p>Python developer with background in electrical engineering 
-			and project management.<br/> Passionate about Artificial Intelligence 
-			for customer-focused solutions.</p>
+			<p>an electrical engineer who is passionate about control system theory and its applications.
+			</p>
 		</div>
 	  </header>
 
@@ -27,12 +26,29 @@
 			<p>View selected projects below, do not hesitate to contact me for more information.</p>
 
 			<!-- Project 1 -->
-			<section class="project-wrap">			  
+			<section class="project-wrap">
+				<img src="images/autoDN.jpg" alt="autoDN">
+				<div>
+					<h3>autoDN</h3>
+					<p> a SCADA system for monitoring and controlling electrical distribution network's faults.</p>
+					<ul>
+					  <li> Siemens s7-1200, Simatic HMI KTP-400, and WinCC Runtime Professional</li>
+					  <li>Graduation project</li>
+					</ul>
+					<a class="btn" target="_blank" href="https://www.prototypesforhumanity.com/project/autodn/">View project</a>
+				</div>
+				<div class="doctorizer-video-container" onclick="toggle();">
+				   <video src="./videos/doctorizer_demo.mp4" controls="true" />
+				</div>
+			  </section>
+
+			<!-- Project 2 -->
+			<section class="project-wrap">
 			  <img src="images/doctorizer.png" alt="Doctoraizer">
 			  <div>
 				  <h3>Doctorizer</h3>
-				  <p> A desktop application that analyzes the x-ray chest images and detects abnormalities in the lung in order to help discover a possible infection with COVID-19 virus.</p>
-				  <ul> 
+				  <p> a desktop application that analyzes the x-ray chest images and detects abnormalities in the lung in order to help discover a possible infection with COVID-19 virus.</p>
+				  <ul>
 					<li> Built with Python, using Tkinter for the GUI, Keras for the CNN model, and SQLite.</li>
 					<li>Team leader, and responsible for the GUI and the CNN model.</li>
 				  </ul>
@@ -43,26 +59,26 @@
 			  </div>
 			</section>
 
-			<!-- Project 2 -->
+			<!-- Project 3 -->
 			<section class="project-wrap">
 			  <img src="images/rahhaleh.png" alt="Rahhaleh">
 			  <div>
 				  <h3>Rahhaleh</h3>
-				  <p>Rahhaleh is a website to search for flight information and review your flights to contribute to the airlines rating community.</p>
+				  <p>a website to search for flight information and review your flights to contribute to the airlines rating community.</p>
 				  <ul>
 					<li>Built with JavaScript, HTML, CSS, using EJS, Node.js/Express for the server, and PostgreSQL.</li>
 					<li>Team leader, and responsible for the community and the rating system.</li>
 				  </ul>
-				  <a class="btn" href="https://rahhaleh.herokuapp.com" target="_blank">View live site</a>
+				  <a class="btn" href="https://github.com/rahhaleh/flights" target="_blank">View in Github</a>
 			  </div>
 			</section>
 
 			<!-- Project 4 -->
-			<section class="project-wrap">			  
+			<section class="project-wrap">
 			  <img src="images/formsanalyzer.png" alt="Quizy-Buzzy">
 			  <div>
 				  <h3>Google Forms Analyzer</h3>
-				  <p> A website where you can upload the spreadsheet/Excel file from google forms data,then the website plots all possible charts for the data inside the sheet.</p>
+				  <p> a website where you can upload the spreadsheet/Excel file from google forms data,then the website plots all possible charts for the data inside the sheet.</p>
 				  <ul>
 					<li>Built with Chart.js and Bootstrap.</li>
 					<li>personal project</li>
@@ -70,70 +86,14 @@
 				  <a class="btn" href="https://nizaralsaeed.github.io/formsAnalyser/" target="_blank">View live site</a>
 			  </div>
 			</section>
-			
+
 
 		</div>
 	  </section>
 
-      <!-- ***************  WORK EXPERIENCE  ***************** -->
-      <section class="work">
-	  	<div class="container divider pnm">
-			<h2>Work Experience</h2>
-
-			<!-- Job 1 -->
-			<section>
-			  <div class="job-summary">
-				  <h3>Engineering Project Lead</h3>
-				  <p>Royal Taflous Racing Team</p>
-				  <p>2019 - 2021</p>
-			  </div>
-			  <div class="job-details">
-				  <p>Managed the engineering design and manufacturing processes.</p>
-			  </div>
-			</section>
-			
-			<!-- Job 2 -->
-			<section>
-			  <div class="job-summary">
-				  <h3>Electrical Engineering Intern</h3>
-				  <p>Jordan Electric Power Company (JEPCO)</p>
-				  <p>May-July 2020</p>
-			  </div>
-			  <div class="job-details">
-				  <p>Worked as a SCADA system operator for a Medium-voltage network.</p>
-			  </div>
-			</section>
-
-		</div>
-      </section>
-
-      <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
-      <section class="edu">
-  	  	<div class="container pnm">
-			<div>
-				<h2>Education</h2>
-				<section>
-				  <h3>Abdul Aziz Al Ghurair School of Advanced Computing | Amman, Jordan</h3>
-				  <p>Certificate - Advanced Software Development in Python</p>
-				  <p>Intensive 6-months Full-time program covering Software Development technologies. <br/>Powered by <span><a href="https://www.codefellows.org/" target="blank">CodeFellows</a></span></p>
-				</section>
-
-
-				<section>
-				  <h3>Tafila Technical University | Tafila, Jordan</h3>
-				  <p>Bachelor Degree of Electrical Engineering </p>
-				</section>
-			</div>
-			<div>
-				<img src="./images/book.png" />
-			</div>
-		</div>
-      </section>
-
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
       <footer>
 	  <div class="container">
-			  <a href="mailto:nizar.ayman@live.com"><img src="./images/mail.png" /></a>
 			  <a href="https://www.linkedin.com/in/nizaralsaeed/" target="_blank"><img src="./images/linkedin.png" /></a>
 			  <a href="https://www.github.com/nizaralsaeed/" target="_blank"><img src="./images/github.png" /></a>
 		</div>
@@ -143,7 +103,7 @@
 		function toggle(){
 			let videoContainer= document.querySelector(".doctorizer-video-container");
 			let video= document.querySelector("video");
-			
+
 			console.log(videoContainer.classList.toggle("active"));
 			video.pause();
 			video.currentTime =0;
